First batch of easy fixes